call on no tap impl.

--- a/index.html
+++ b/index.html
@@ -131,11 +131,13 @@
                                         <li>
                                             <a></a>
                                         </li>
-                                        <li><a>Sankalp Rath : <i class="fa fa-phone"></i> 94397 17907</a></li>
-                                        <li>
-                                            <a>Aradhana Behera : <i class="fa fa-phone"></i> 94390 19467</a>
+                                        <li><a>Sankalp Rath : <i class="fa fa-phone"></i><a href="tel:+919439717907"> 94397 17907</a> </a>
                                         </li>
-                                        <li><a>Sitakanta Bej : <i class="fa fa-phone"></i> 78943 97514</a></li>
+                                        <li>
+                                            <a>Aradhana Behera : <i class="fa fa-phone"></i><a href="tel:+919439019467"> 94390 19467</a></a>
+                                        </li>
+                                        <li><a>Sitakanta Bej : <i class="fa fa-phone"></i><a href="tel:+917894397514"> 78943 97514</a> </a>
+                                        </li>
 
                                     </ul>
                                 </div>
@@ -144,10 +146,10 @@
                                 <div class="footer-pad">
                                     <h2 style="font-family: 'Patua One', cursive;">Follow Us</h2>
                                     <ul class="social-network social-circle">
-                                        <li><a href="https://www.facebook.com/Technovation2020/" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a class="icoFacebook" title="Twitter"><i class="fa fa-twitter"></i></a>
+                                        <li><a href="https://www.facebook.com/Technovation2020/" class="icoLinkedin grey" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="icoLinkedin  grey" title="Twitter"><i class="fa fa-twitter"></i></a>
                                         </li>
-                                        <li><a href="https://www.instagram.com/technovation2020/" class="icoLinkedin" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                                        <li><a href="https://www.instagram.com/technovation2020/" class="icoLinkedin grey" title="Instagram"><i class="fa fa-instagram"></i></a></li>
 
                                     </ul>
                                     <br>
