--- a/contactus.html
+++ b/contactus.html
@@ -44,7 +44,7 @@
                     <a class="btn-nav raise" href="faqs.html">FAQs</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn-nav raise" href="sponsor.html">Sponsor</a>
+                    <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
 
                 </li>
                 <li class="nav-item active">
@@ -87,11 +87,11 @@
                 <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
                     <!-- side block -->
                     <!-- block 1 chief-cood-b -->
-                    <div id="chief-cood-b" class="container-fluid tilt-in-bl d-block">
+                    <div id="chief-cood-b" class="container-fluid  d-block">
                         <!-- row 1 -->
                         <div class="row">
                             <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
-                                <div class="card-contact-us">
+                                <div class="card-contact-us slide-in-elliptic-bottom-fwd">
                                     <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
 
                                     <div class=" card-contactus title">Sankalp Rath</div>
@@ -104,7 +104,7 @@
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
-                                <div class="card-contact-us">
+                                <div class="card-contact-us slide-in-elliptic-bottom-fwd">
                                     <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
 
                                     <div class=" card-contactus title">Aradhana Behera</div>
