--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="msvalidate.01" content="F0EB8193BFCE1E364ACB8E26FD32DCDD" />
     <meta name="keywords" content="IGIT TECHNOVATION,IGITTECHNOVATION,technovation,technovation 2020,igit tech" />
     <meta name="description" content="Branch Fest Of IGIT Sarang,CSEA Department" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home | Technovation 2020</title>
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet">
