--- a/events.html
+++ b/events.html
@@ -73,7 +73,7 @@
         </nav>
 
 
-        <div style="width: 100%;height: auto;background: linear-gradient(to right bottom,rgb(34, 0, 0),rgb(109, 0, 103));padding: 10vh 5%;min-height: 100vh;">
+        <div id="events" style="width: 100%;height: auto;background: linear-gradient(to right bottom, rgb(34, 0, 0), rgb(109, 0, 103));padding: 10vh 5%;min-height: 100vh;">
 
             <br>
             <br>
