--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <img class="mx-auto" style="margin-top: 20vh;" src="images/Ripple-1s-200px.svg">
         <br>
         <span class="text">Technovation 2020</span>
+        <img src="/images/tech.png" style="display: none;">
     </div>
     <div id="contents">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
