--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <button class="c-item btn btn-outline-primary wow zoomIn"><b>TAKE A TOUR</b></button>
         </div>
 
-        <img src="/images/tech.png" style="display: none;">
+        <img src="./images/tech.png" style="display: none;">
         <br>
         <br>
         <br>
