--- a/gallery.html
+++ b/gallery.html
@@ -20,89 +20,96 @@
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <a class="navbar-brand nav-brand-text" href="index.html"><b>TECHNOVATION <span style="font-size:1.1em;">2020</span></b></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <div id="load">
+        <img class="mx-auto" style="margin-top: 20vh;" src="images/Ripple-1s-200px.svg">
+        <br>
+        <span class="text">Technovation 2020</span>
+    </div>
+    <div id="contents">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+            <a class="navbar-brand nav-brand-text" href="index.html"><b>TECHNOVATION <span style="font-size:1.1em;">2020</span></b></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse-nav collapse navbar-collapse text-center" id="navbarText">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="btn-nav raise" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn-nav raise" href="events.html">Events</a>
+            <div class="collapse-nav collapse navbar-collapse text-center" id="navbarText">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="btn-nav raise" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn-nav raise" href="events.html">Events</a>
 
-                </li>
-                <li class="nav-item active">
-                    <a class="btn-nav text-white" href="#">Gallery <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="btn-nav text-white" href="#">Gallery <span class="sr-only">(current)</span></a>
 
-                </li>
-                <li class="nav-item">
-                    <a class="btn-nav raise" href="faqs.html">FAQs</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn-nav raise" href="faqs.html">FAQs</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
 
-                </li>
-                <li class="nav-item">
-                    <a class="btn-nav raise" href="contactus.html">Contact Us </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div style="width: 100%;height: auto;background: linear-gradient(to right bottom,rgb(34, 0, 0),rgb(42, 1, 61));min-height: 100vh;">
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn-nav raise" href="contactus.html">Contact Us </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div style="width: 100%;height: auto;background: linear-gradient(to right bottom,rgb(34, 0, 0),rgb(42, 1, 61));min-height: 100vh;">
 
-        <div id="carousel-space">
-            <div id="drag-container">
-                <div id="spin-container">
-                    <!-- Add your images (or video) here -->
-                    <img src="images/gallery_images/img1.jpg" alt="">
-                    <img src="images/gallery_images/img3.JPG" alt="">
-                    <img src="images/gallery_images/img4.JPG" alt="">
-                    <img src="images/gallery_images/img5.JPG" alt="">
-                    <img src="images/gallery_images/img6.JPG" alt="">
-                    <img src="images/gallery_images/img2.png" alt="">
-                    <img src="images/gallery_images/img7.JPG" alt="">
+            <div id="carousel-space">
+                <div id="drag-container">
+                    <div id="spin-container">
+                        <!-- Add your images (or video) here -->
+                        <img src="images/gallery_images/img1.jpg" alt="">
+                        <img src="images/gallery_images/img3.JPG" alt="">
+                        <img src="images/gallery_images/img4.JPG" alt="">
+                        <img src="images/gallery_images/img5.JPG" alt="">
+                        <img src="images/gallery_images/img6.JPG" alt="">
+                        <img src="images/gallery_images/img2.png" alt="">
+                        <img src="images/gallery_images/img7.JPG" alt="">
 
-                    <!-- Example image with link -->
-                    <a target="_blank" href="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg">
-                        <img src="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
-                    </a>
+                        <!-- Example image with link -->
+                        <a target="_blank" href="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg">
+                            <img src="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
+                        </a>
 
-                    <!-- Example add video  -->
-                    <!-- <video controls autoplay="autoplay" loop>
+                        <!-- Example add video  -->
+                        <!-- <video controls autoplay="autoplay" loop>
           <source src="https://player.vimeo.com/external/322244668.sd.mp4?s=338c48ac2dfcb1d4c0689968b5baf94eee6ca0c1&profile_id=165&oauth2_token_id=57447761" type="video/mp4">
         </video> -->
 
-                    <!-- Text at center of ground -->
-                    <div id="t-logo">
-                        <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;"></div>
-                        <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(2px);"></div>
-                        <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(4px);"></div>
-                        <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(6px);"></div>
-                        <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(8px);"></div>
-                        <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(10px);"></div>
-                        <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(12px);"></div>
-                        <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(1.1px);"></div>
-                        <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(3.3px);"></div>
-                        <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(5.5px);"></div>
-                        <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(7.7px);"></div>
-                        <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(9.9px);"></div>
-                        <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(11.11px);"></div>
-                        <div style="position: absolute;background:linear-gradient(to bottom, rgb(22,89,218),rgb(11,48,76));height: 120px;width: 10px;background-size: contain;background-repeat: no-repeat;transform:  translate3d(105px, 0px, 5px) rotateY(-90deg);"></div>
+                        <!-- Text at center of ground -->
+                        <div id="t-logo">
+                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;"></div>
+                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(2px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(4px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(6px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(8px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(10px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(12px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(1.1px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(3.3px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(5.5px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(7.7px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(9.9px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(11.11px);"></div>
+                            <div style="position: absolute;background:linear-gradient(to bottom, rgb(22,89,218),rgb(11,48,76));height: 120px;width: 10px;background-size: contain;background-repeat: no-repeat;transform:  translate3d(105px, 0px, 5px) rotateY(-90deg);"></div>
+
+                        </div>
 
                     </div>
-
+                    <div id="ground"></div>
                 </div>
-                <div id="ground"></div>
             </div>
+
+
+
+
+
         </div>
-
-
-
-
 
     </div>
 
