gallery for mobile

--- a/gallery.html
+++ b/gallery.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/carousel3d.css">
+    <link rel="stylesheet" href="css/gallery2.css">
     <link rel="stylesheet" href="css/hover.css">
 </head>
 
@@ -59,7 +60,7 @@
         </nav>
         <div style="width: 100%;height: auto;background: linear-gradient(to right bottom,rgb(34, 0, 0),rgb(42, 1, 61));min-height: 100vh;">
 
-            <div id="carousel-space">
+            <div id="carousel-space" class="display-3d">
                 <div id="drag-container">
                     <div id="spin-container">
                         <!-- Add your images (or video) here -->
@@ -103,6 +104,16 @@
                     </div>
                     <div id="ground"></div>
                 </div>
+            </div>
+
+            <div id="carousel-space" class="display-2d">
+                <figure id="showcase">
+                    <section></section>
+                    <section></section>
+                    <section></section>
+                    <section></section>
+                </figure>
+
             </div>
 
 
