contact us redesigned,sponsor initiated,gallery mobile new shapes

--- a/contactus.html
+++ b/contactus.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Ropa+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bevan&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Concert+One&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Mirza&display=swap" rel="stylesheet">
 
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -47,9 +50,9 @@
                         <a class="btn-nav raise" href="gallery.html">Gallery</a>
 
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="btn-nav raise" href="faqs.html">FAQs</span></a>
-                    </li>
+                    </li>-->
                     <li class="nav-item">
                         <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
 
@@ -60,7 +63,7 @@
                 </ul>
             </div>
         </nav>
-        <div style="width: 100%;height: auto;background: linear-gradient(to right bottom,#2A5470,#4C4177);padding: 10vh 5%;min-height: 100vh;">
+        <div style="width: 100%;height: auto;background: linear-gradient(to bottom,rgb(9,29,55) , rgb(11,34,66));padding: 10vh 5%;min-height: 100vh;">
             <div class="team-header">
                 OUR TEAM
 
@@ -349,7 +352,7 @@
                                     <div class="card-contact-us">
                                         <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
 
-                                        <div class=" card-contactus title">Amisa samal</div>
+                                        <div class=" card-contactus title">Amisa Samal</div>
                                         <div class=" card-contactus sub-title">MCA</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
@@ -794,9 +797,9 @@
                                         <div class=" card-contactus title doadjust">Debasmita Debadarshini</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
                                         <ul class="social-network social-circle center">
-                                            <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                            <li><a class="icoFacebook" href="https://www.facebook.com/debasmita.parida.129"><i class="fa fa-facebook"></i></a></li>
                                             <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
-                                            <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                            <li><a class="icoFacebook" href="https://www.instagram.com/_debasmita_221/"><i class="fa fa-instagram"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
