--- a/sponsor.html
+++ b/sponsor.html
@@ -10,12 +10,15 @@
 
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Ropa+Sans&display=swap" rel="stylesheet">
 
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/hover.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/sponsors.css">
 </head>
 
 <body>
@@ -39,9 +42,9 @@
                     <a class="btn-nav raise" href="gallery.html">Gallery</a>
 
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                     <a class="btn-nav raise" href="faqs.html">FAQs</span></a>
-                </li>
+                </li>-->
                 <li class="nav-item active">
                     <a class="btn-nav text-white" href="#">Sponsors <span class="sr-only">(current)</span></a>
 
@@ -54,8 +57,33 @@
     </nav>
     <div style="width: 100%;height: auto;background: linear-gradient(to right bottom,#09203f , #537895);padding: 10vh 5%;min-height: 100vh;">
 
+        <div class="sponsors-heading-brand">Our Proud Sponsors</div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6 offset-md-3">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/ntpc.png" alt="">
+                        <div class="sponsor-name">
+                            NTPC
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
 
+            </div>
+            <div class="row">
 
+            </div>
+            <div class="row">
+
+            </div>
+
+            <div class="row">
+
+            </div>
+
+        </div>
 
     </div>
 
