--- a/events.html
+++ b/events.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two&display=swap" rel="stylesheet">
 
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -56,9 +57,9 @@
                         <a class="btn-nav raise" href="gallery.html">Gallery</a>
 
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="btn-nav raise" href="faqs.html">FAQs</a>
-                    </li>
+                    </li>-->
                     <li class="nav-item">
                         <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
 
