--- a/gallery.html
+++ b/gallery.html
@@ -45,9 +45,9 @@
                         <a class="btn-nav text-white" href="#">Gallery <span class="sr-only">(current)</span></a>
 
                     </li>
-                    <li class="nav-item">
+                   <!--<li class="nav-item">
                         <a class="btn-nav raise" href="faqs.html">FAQs</span></a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
 
