--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                         <a class="btn-nav raise" href="gallery.html">Gallery</a>
 
                     </li>
-                    <li class="nav-item">
+                   <!-- <li class="nav-item">
                         <a class="btn-nav raise" href="faqs.html">FAQs</a>
-                    </li>
+                    </li>--> 
                     <li class="nav-item">
                         <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
 
