--- a/gallery.html
+++ b/gallery.html
@@ -60,6 +60,7 @@
         </nav>
         <div style="width: 100%;height: auto;background: linear-gradient(to right bottom,rgb(34, 0, 0),rgb(42, 1, 61));min-height: 100vh;">
 
+            <!-- For Desktops -->
             <div id="carousel-space" class="display-3d">
                 <div id="drag-container">
                     <div id="spin-container">
@@ -105,7 +106,7 @@
                     <div id="ground"></div>
                 </div>
             </div>
-
+            <!-- For Mobile Phones -->
             <div id="carousel-space" class="display-2d">
                 <figure id="showcase">
                     <section></section>
