--- a/sponsor.html
+++ b/sponsor.html
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Ropa+Sans&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Sail&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bellefair&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -60,7 +61,7 @@
         <div class="sponsors-heading-brand">Our Proud Sponsors</div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6 offset-md-3">
+                <div class="col-md-6 offset-md-3 col-sm-12">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/ntpc.png" alt="">
                         <div class="sponsor-name">
@@ -70,17 +71,78 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-md-6 col-sm-12">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/nalco.jpg" alt="">
+                        <div class="sponsor-name">
+                            NALCO
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/studio11.png" alt="">
+                        <div class="sponsor-name">
+                            STUDIO 11
+                        </div>
+                    </div>
+                </div>
 
             </div>
             <div class="row">
-
+                <div class="col-md-6 col-sm-12">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/cineplexx.png" alt="">
+                        <div class="sponsor-name">
+                            CINEPLEXX
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/greentrends.png" alt="">
+                        <div class="sponsor-name">
+                            GREENTRENDS
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="row">
-
+                <div class="col-md-6 col-sm-12">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/jt.png" alt="">
+                        <div class="sponsor-name">
+                            JAVA TECHNOCRAT
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/lit.jpg" alt="">
+                        <div class="sponsor-name">
+                            LIT
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="row">
-
+                <div class="col-md-6 col-sm-12">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/interface.png" alt="">
+                        <div class="sponsor-name">
+                            INTERFACE SOFTWARE
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/modi.jpg" alt="">
+                        <div class="sponsor-name">
+                            MODI COLLECTION
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
@@ -94,6 +156,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="js/sponsors.js"></script>
 </body>
 
 </html>
