--- a/contactus.html
+++ b/contactus.html
@@ -76,7 +76,7 @@
                         <div class="contactus-content-h">
                             <a class="heading selected" id="chief-cood">Chief Coordinator</a>
                             <a class="heading" id="chief-e-cood">Chief Event Coordinator</a>
-                            <a class="heading" id="treasure">Treasure</a>
+                            <a class="heading" id="treasure">Treasurer</a>
                             <a class="heading" id="chief-admin">Chief Admin</a>
                             <a class="heading" id="public-r">Public Relation</a>
                             <a class="heading" id="technical">Technical Event</a>
