--- a/contactus.html
+++ b/contactus.html
@@ -622,7 +622,7 @@
                                     <div class="card-contact-us">
                                         <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
 
-                                        <div class=" card-contactus title">Kareesma Pradhan</div>
+                                        <div class=" card-contactus title">Sumitra Singh</div>
                                         <div class=" card-contactus sub-title">MCA</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
