--- a/sponsor.html
+++ b/sponsor.html
@@ -60,8 +60,9 @@
 
         <div class="sponsors-heading-brand">Our Proud Sponsors</div>
         <div class="container-fluid">
+            <!-- row 1 -->
             <div class="row">
-                <div class="col-md-6 offset-md-3 col-sm-12">
+                <div class="col-md-6 offset-md-3 col-sm-12 col-lg-4 offset-lg-4">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/ntpc.png" alt="">
                         <div class="sponsor-name">
@@ -70,8 +71,9 @@
                     </div>
                 </div>
             </div>
+            <!-- row 2 -->
             <div class="row">
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/nalco.jpg" alt="">
                         <div class="sponsor-name">
@@ -79,7 +81,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/studio11.png" alt="">
                         <div class="sponsor-name">
@@ -89,8 +91,9 @@
                 </div>
 
             </div>
+            <!-- row 3 -->
             <div class="row">
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/cineplexx.png" alt="">
                         <div class="sponsor-name">
@@ -98,7 +101,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/greentrends.png" alt="">
                         <div class="sponsor-name">
@@ -107,8 +110,9 @@
                     </div>
                 </div>
             </div>
+            <!-- row 4 -->
             <div class="row">
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/jt.png" alt="">
                         <div class="sponsor-name">
@@ -116,7 +120,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/lit.jpg" alt="">
                         <div class="sponsor-name">
@@ -125,9 +129,9 @@
                     </div>
                 </div>
             </div>
-
+            <!-- row 5 -->
             <div class="row">
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/interface.png" alt="">
                         <div class="sponsor-name">
@@ -135,11 +139,87 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/modi.jpg" alt="">
                         <div class="sponsor-name">
                             MODI COLLECTION
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- row 6 -->
+            <div class="row">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/cricketscafe.jpg" alt="">
+                        <div class="sponsor-name">
+                            THE CRICKET'S CAFE
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/samalcare.jpg" alt="">
+                        <div class="sponsor-name">
+                            SAMALCARE
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- row 7 -->
+            <div class="row">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/b21.png" alt="">
+                        <div class="sponsor-name">
+                            B21 SALON & SPA
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/khaloji.png" alt="">
+                        <div class="sponsor-name">
+                            KHALO JII
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- rpw 8 -->
+            <div class="row">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/bocca.png" alt="">
+                        <div class="sponsor-name">
+                            BOCCACAFE
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/inkstories.png" alt="">
+                        <div class="sponsor-name">
+                            INKSTORIES
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- row 9 -->
+            <div class="row">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/richard.jpg" alt="">
+                        <div class="sponsor-name">
+                            RICHARDS SALON & SPA
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/mcl.png" alt="">
+                        <div class="sponsor-name">
+                            MCL
                         </div>
                     </div>
                 </div>
