some images updated

--- a/contactus.html
+++ b/contactus.html
@@ -108,7 +108,7 @@
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href="https://www.facebook.com/sankalp.rath.52"><i class="fa fa-facebook"></i></a></li>
-                                            <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-phone"></i></a></li>
                                             <li><a class="icoFacebook" href="https://instagram.com/1.1_dollar_bill?igshid=82087b5pg9f8"><i class="fa fa-instagram"></i></a></li>
                                         </ul>
                                     </div>
@@ -202,8 +202,8 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
-
+                                        <img class="card-contactus image" src="images/team_mca/Amit kumara moharana.jpg" alt="">
+                                        <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Amit Ku. Maharana</div>
                                         <div class=" card-contactus sub-title">MCA</div>
                                         <ul class="social-network social-circle center">
@@ -283,8 +283,8 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
-
+                                        <img class="card-contactus image" src="images/team_mca/Anuranjita kund.jpg" alt="">
+                                        <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Anu Ranjita Kund</div>
                                         <div class=" card-contactus sub-title">MCA</div>
                                         <ul class="social-network social-circle center">
@@ -471,7 +471,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Pankaj Kumar mohanta.jpg" alt="">
 
                                         <div class=" card-contactus title">Pankaj Ku. Mahanta</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -675,7 +675,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Amulya Raj Sahoo.jpg" alt="">
 
                                         <div class=" card-contactus title">Amulyaraj Sahoo</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -811,7 +811,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Kaushik kumar behera.jpg" alt="">
 
                                         <div class=" card-contactus title">Kaushik Ku. Behera</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -879,7 +879,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Nirmalya samanta.jpg" alt="">
 
                                         <div class=" card-contactus title">Nirmalya Samant</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -947,7 +947,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Bibekananda pradhan.jpg" alt="">
 
                                         <div class=" card-contactus title">Bibekananda Pradhan</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -1083,7 +1083,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Nirmalya Behura.jpg" alt="">
 
                                         <div class=" card-contactus title">Nirmalya Behura</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -1151,7 +1151,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Rajib Kumar behera.jpg" alt="">
 
                                         <div class=" card-contactus title">Rajib Kumar Behera</div>
                                         <div class=" card-contactus sub-title">MCA</div>
