--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                         <a class="btn-nav raise" href="gallery.html">Gallery</a>
 
                     </li>
-                   <!-- <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="btn-nav raise" href="faqs.html">FAQs</a>
-                    </li>--> 
+                    </li>-->
                     <li class="nav-item">
                         <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
 
@@ -76,7 +76,7 @@
             <div class="ex1"></div>
             <div class="ex2"></div>
             <div class="ex3"></div>
-            <button class="c-item btn btn-outline-primary wow zoomIn"><b>TAKE A TOUR</b></button>
+            <a href="./theme.html"><button class="c-item btn btn-outline-primary wow zoomIn"><b>TAKE A TOUR</b></button></a>
         </div>
 
         <img src="./images/tech.png" style="display: none;">
